# Konsou

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PRODUCT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: privacy.html  terms.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Onboarding.tsx  ReconcilePrompt.tsx
src/components/anime/: AnimeCard.tsx  AnimeCover.tsx  EditSheet.tsx  EpisodeCounter.tsx  FranchiseCard.tsx  FranchiseSheet.tsx  SeasonBar.tsx  StatusBadge.tsx  StatusSheet.tsx  statusMeta.ts
src/components/layout/: AppShell.tsx  BottomNav.tsx  PageHeader.tsx  Sidebar.tsx  TopBar.tsx  navConfig.ts
src/components/list/: AnimeCollection.tsx  FranchiseCollection.tsx  ListToolbar.tsx  SortSheet.tsx
src/components/ui/: BottomSheet.tsx  Button.tsx  Chip.tsx  (+9 more)
src/hooks/: useAndroidBack.ts  useAniList.ts  useDebounce.ts  useEpisodeIncrement.ts  useLazyImage.ts  useMediaQuery.ts
src/lib/: features.ts  format.ts  lifecycle.ts  openExternal.ts  platform.ts  statusValidation.ts  updater.ts  version.ts
src/pages/: Alerts.tsx  AnimeDetail.tsx  Discover.tsx  MyList.tsx  Schedule.tsx  Search.tsx  Settings.tsx  Stats.tsx
src/styles/: anime.css  global.css  layout.css  list.css  pages.css  tokens.css  ui.css
src/types/: anime.ts  list.ts  notification.ts  sync.ts
(+28 files in other folders)
